GSX EFB Integration - GSX Pushback Page (WIP) - Fixed some issues with the localization - Changes GsxMenuStates to strings - Added temporary helper functions to retrieve GSX Menu and Tooltips

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -460,10 +460,10 @@
     "UseControllerInput": "Use Controller Input",
     "Gsx": {
       "RequestPushback": "Request Pushback",
-      "NoseRight": "Nose Right/Tail Left",
-      "NoseLeft": "Nose Left/Tail Right",
+      "NoseRight": "Nose Right",
+      "NoseLeft": "Nose Left",
       "Straight": "Straight",
-      "ConfirmEngineStart": "Confirm Good Engine Start",
+      "ConfirmEngineStart": "Confirm Good Start",
       "AbortPushback": "Abort Pushback",
       "StopPushback": "Stop Pushback"
     }
