--- a/fbw-a32nx/src/localization/flypad/sv.json
+++ b/fbw-a32nx/src/localization/flypad/sv.json
@@ -152,12 +152,12 @@
       "BoardingTime": "Ombordstigningstid",
       "Cargo": "Frakt",
       "Current": "Nuvarande",
-      "DeboardConfirmationBody": "Bekräfta avstigning av alla passagerare",
+      "DeboardConfirmationBody": "Bekräfta avstigning för alla passagerare",
       "DeboardConfirmationCancel": "Avbryt",
-      "DeboardConfirmationConfirm": "Avbordstigning",
-      "DeboardConfirmationTitle": "Avborda passagerare?",
+      "DeboardConfirmationConfirm": "Avstigning",
+      "DeboardConfirmationTitle": "Släpp av passagerare?",
       "EstimatedDurationUnit": "minuter",
-      "GSXPayloadSyncEnabled": "Synkronisering av GSX-nyttolast aktiverad",
+      "GSXPayloadSyncEnabled": "Synkronisering av last med GSX aktiverad",
       "GW": "GW",
       "GWCG": "GW CG",
       "LoadingTime": "Loading Time",
