cleaned up dead code Changed take off and repeay icons for modes Added missing failure pool broadcast when adding a gen Removed Unique letter for generator title

--- a/fbw-a32nx/src/localization/flypad/fr.json
+++ b/fbw-a32nx/src/localization/flypad/fr.json
@@ -175,8 +175,8 @@
       "ToolTipFailureList": "Ouvre la page de choix des pannes déclenchables par ce générateur",
       "ToolTipGeneratorSettings": "Ouvre la page des régales du générateur de pannes",
       "ToolTipOff": "Aucune panne ne va survenir",
+      "ToolTipOnce": "Des pannes se déclencheront un seule fois dès que les conditions sont réunies",
       "ToolTipRepeat": "Des pannes se déclencheront à chaque fois que les conditions sont réunies",
-      "ToolTipRepeat1": "Des pannes se déclencheront un seule fois dès que les conditions sont réunies",
       "ToolTipTakeOff": "Des pannes se déclencheront un seule fois par décollage dès que les conditions sont réunies",
       "Title": "Générateur de panne",
       "years": "années",
@@ -187,8 +187,8 @@
         "ExclamationDiamond": "La page où selectionner les pannes qui peuvent survenir lorsque le générateur se déclenche.",
         "Info": "Pour plus d'informations, consultez: docs.flybywiresim.com/a32nx-failures",
         "InfoTitle": "Informations et legende",
+        "Once": "Le générateur de panne est armé et va déclencher des pannes une seule fois puis se désarmer.",
         "Repeat": "Le générateur de panne est armé et va déclencher de manière répétée des pannes quand ses conditions sont remplies.",
-        "Repeat1": "Le générateur de panne est armé et va déclencher des pannes une seule fois puis se désarmer.",
         "Sliders2Vertical": "La page pour les réglages de chaque générateur de panne.",
         "ToggleOff": "Le générateur de panne n'est pas armé et ne déclenchera aucune panne.",
         "Trash": "Supprime le générateur de panne et ses réglages."
