--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -175,10 +175,10 @@
       "ToolTipFailureList": "Opens the page to select failures that can be triggered by this failure generator",
       "ToolTipGeneratorSettings": "Opens the page for the settings of this failure generator",
       "ToolTipOff": "No failure will occur",
+      "ToolTipOnce": "Failures will occur only once, when the conditions are met",
       "ToolTipReady": "READY",
       "ToolTipStandby": "STANDBY",
       "ToolTipRepeat": "Failures will occur every time the conditions are met",
-      "ToolTipRepeat1": "Failures will occur only once, when the conditions are met",
       "ToolTipTakeOff": "Failures will occur only once per take-off, when the conditions are met",
       "Title": "Failure Generator",
       "years": "years",
@@ -189,8 +189,8 @@
         "ExclamationDiamond": "The page to select which failures can happen when the generator triggers.",
         "Info": "For More information see: docs.flybywiresim.com/a32nx-failures",
         "InfoTitle": "Information and legend",
+        "Once": "The failure generator is armed and will trigger the failures only once and then disarm.",
         "Repeat": "The failure generator is armed and will repeatingly trigger the failures when conditions are met.",
-        "Repeat1": "The failure generator is armed and will trigger the failures only once and then disarm.",
         "Sliders2Vertical": "The page for the settings of each failure generator.",
         "ToggleOff": "The failure generator is not armed and will not trigger any failure.",
         "Trash": "Removes the failure generator and its settings."
