Fixed Altitude min max values behaviour Setting pops up on creation Failure pool pops up on creation

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -157,6 +157,7 @@
       "MinimumGroundSpeed": "Minimum ground speed",
       "minutes": "minutes",
       "months": "months",
+      "Next": "Next",
       "None": "None",
       "NumberOfFailures": "Number of failures",
       "NoFailure": "No failure",
