--- a/fbw-a32nx/src/localization/flypad/fr.json
+++ b/fbw-a32nx/src/localization/flypad/fr.json
@@ -157,6 +157,7 @@
       "MinimumGroundSpeed": "Vitesse au sol minimale",
       "minutes": "minutes",
       "months": "mois",
+      "Next": "Suivant",
       "None": "Aucun",
       "NumberOfFailures": "Nombre de pannes",
       "NoFailure": "Aucune panne",
