feat: running and stopping states

--- a/fbw-common/src/wasm/systems/systems/src/apu/PW980.md
+++ b/fbw-common/src/wasm/systems/systems/src/apu/PW980.md
@@ -357,133 +357,282 @@ N1, Hz
 100, 400;
 ```
 
-# Shutdown: N to ΔEGT (compared to moment of shutdown)
+# Shutdown: N2 to ΔEGT (compared to moment of shutdown)
 
 ```
-N, ΔEGT
-100, 0;
-99, -1;
-98, -2;
-97, -3;
-96, -4;
-95, -5;
-89, -5;
-83, -5;
+N2, ΔEGT
+85, 0;
+84, 0;
+83, -10;
+82, -10;
+81, -25;
+80, -35;
 79, -40;
-75, -45;
+78, -45;
+77, -45;
+76, -45;
+75, -50;
+74, -50;
+73, -50;
 72, -50;
-68, -65;
-65, -100;
-63, -100;
-60, -100;
-58, -100;
-56, -100;
-53, -100;
-52, -100;
-50, -100;
-48, -100;
-46, -100;
-45, -100;
-44, -100;
-42, -100;
-41, -100;
+71, -50;
+70, -50;
+69, -50;
+68, -50;
+67, -50;
+66, -50;
+65, -50;
+64, -50;
+63, -55;
+62, -55;
+61, -55;
+60, -60;
+59, -60;
+58, -60;
+57, -60;
+56, -60;
+55, -65;
+54, -65;
+53, -65;
+52, -65;
+51, -70;
+50, -70;
+49, -75;
+48, -75;
+47, -80;
+46, -80;
+45, -80;
+44, -85;
+43, -90;
+42, -95;
+41, -95;
 40, -100;
-39, -100;
-37, -100;
-36, -100;
-35, -105;
-34, -105;
-33, -105;
-32, -105;
-31, -105;
-30, -105;
-29, -105;
-28, -105;
-27, -105;
-26, -110;
-25, -110;
-24, -110;
-23, -110;
-22, -110;
-21, -110;
-20, -115;
-19, -115;
-18, -115;
-17, -115;
-16, -115;
-15, -120;
-14, -120;
-13, -120;
-12, -120;
-11, -120;
-10, -125;
-9, -125;
-8, -125;
-7, -125;
-6, -125;
-5, -125;
-4, -120;
-3, -120;
-2, -125;
-1, -125;
-0, -125
+39, -105;
+38, -110;
+37, -115;
+36, -120;
+35, -125;
+34, -130;
+33, -135;
+32, -145;
+31, -150;
+30, -155;
+29, -160;
+28, -165;
+27, -170;
+26, -175;
+25, -185;
+24, -190;
+23, -195;
+22, -200;
+21, -210;
+20, -215;
+19, -225;
+18, -230;
+17, -235;
+16, -240;
+15, -245;
+14, -250;
+13, -255;
+12, -260;
+11, -265;
+10, -270;
+9, -275;
+8, -280;
+7, -285;
+6, -290;
+5, -295;
+4, -300;
+3, -305;
+2, -310;
+1, -315;
 ```
 
-# Shutdown: time to N
+# Shutdown: time to N2
+
+```
+second, N2
+0, 85;
+1, 84;
+2, 83;
+3, 82;
+4, 81;
+5, 80;
+6, 79;
+7, 77;
+8, 76;
+9, 74;
+10, 66;
+11, 55;
+12, 49;
+13, 43;
+14, 38;
+15, 34;
+16, 31;
+17, 28;
+18, 26;
+19, 24;
+20, 23;
+21, 21;
+22, 20;
+23, 19;
+24, 18;
+25, 17;
+26, 16;
+27, 15;
+28, 14;
+29, 14;
+30, 13;
+31, 13;
+32, 12;
+33, 12;
+34, 11;
+35, 11;
+36, 10;
+37, 10;
+38, 10;
+39, 9;
+40, 9;
+41, 9;
+42, 8;
+43, 8;
+44, 8;
+45, 8;
+46, 8;
+47, 7;
+48, 7;
+49, 7;
+50, 7;
+51, 7;
+52, 7;
+53, 6;
+54, 6;
+55, 6;
+56, 6;
+57, 6;
+58, 6;
+59, 5;
+60, 5;
+61, 5;
+62, 5;
+63, 5;
+64, 5;
+65, 5;
+66, 5;
+67, 4;
+68, 4;
+69, 4;
+70, 4;
+71, 4;
+72, 4;
+73, 4;
+74, 4;
+75, 4;
+76, 3;
+77, 3;
+78, 3;
+79, 3;
+80, 2;
+81, 2;
+82, 2;
+83, 2;
+84, 1;
+85, 1;
+86, 0;
+```
+
+# Shutdown: time to N1
 
 ```
 second, N
-0, 100;
-1, 79;
-2, 60;
-3, 48;
-4, 39;
-5, 32;
-6, 27;
-7, 23;
-8, 21;
-9, 19;
-10, 17;
-11, 16;
-12, 14;
-13, 13;
-14, 12;
-15, 11;
-16, 10;
-17, 10;
-18, 9;
-19, 8;
-20, 8;
-21, 8;
-22, 7;
-23, 7;
-24, 6;
-25, 6;
-26, 6;
-27, 5;
-28, 5;
-29, 5;
-30, 4;
-31, 4;
-32, 4;
-33, 4;
-34, 4;
-35, 3;
-36, 3;
-37, 3;
-38, 3;
-39, 3;
-40, 2;
-41, 2;
-42, 2;
-43, 2;
-44, 2;
-45, 1;
-46, 0.8;
-47, 0.6;
-48, 0.4;
-49, 0.2;
-50, 0;
+1, 100;
+2, 98;
+3, 96;
+4, 93;
+5, 91;
+6, 88;
+7, 85;
+8, 81;
+9, 78;
+10, 75;
+11, 70;
+12, 62;
+13, 53;
+14, 46;
+15, 42;
+16, 37;
+17, 33;
+18, 30;
+19, 28;
+20, 26;
+21, 24;
+22, 22;
+23, 21;
+24, 20;
+25, 18;
+26, 17;
+27, 16;
+28, 16;
+29, 15;
+30, 14;
+31, 14;
+32, 13;
+33, 13;
+34, 12;
+35, 12;
+36, 11;
+37, 11;
+38, 10;
+39, 10;
+40, 10;
+41, 9;
+42, 9;
+43, 9;
+44, 8;
+45, 8;
+46, 8;
+47, 8;
+48, 8;
+49, 7;
+50, 7;
+51, 7;
+52, 7;
+53, 7;
+54, 7;
+55, 7;
+56, 6;
+57, 6;
+58, 6;
+59, 6;
+60, 6;
+61, 6;
+62, 6;
+63, 5;
+64, 5;
+65, 5;
+66, 5;
+67, 5;
+68, 5;
+69, 5;
+70, 5;
+71, 4;
+72, 4;
+73, 4;
+74, 4;
+75, 4;
+76, 4;
+77, 4;
+78, 3;
+79, 3;
+80, 3;
+81, 2;
+82, 2;
+83, 2;
+84, 2;
+85, 2;
+86, 1;
+87, 1;
+88, 0;
 ```
 
 # APU BLEED ON time to ΔEGT
