--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -509,7 +509,7 @@
     "AtsuAoc": {
       "AtisAtcSource": "ATIS/ATC Source",
       "AutomaticallyImportSimBriefData": "Automatically Import SimBrief Data",
-      "ImportSimBriefWeights": "Automatically Import SimBrief Fuel & Payload when SimBrief Data was imported",
+      "ImportSimBriefWeights": "Automatically set SimBrief Fuel & Payload on Import",
       "Enable": "Enable",
       "EnableTelex": "Enable TELEX",
       "ErrorReporting": "Error Reporting",
