Added note to the A380 2-axis calibration screen to remember to map axis to throttles correctly

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -623,6 +623,7 @@
       "CurrentValue": "Current Value",
       "Deadband": "Deadband",
       "ErrorOverlapMsg": "overlaps with",
+      "FourThrottleWarning": "Remember to configure MSFS to use Axis 1 for Throttle 1+2 and Axis 2 for Throttle 3+4.",
       "IndependentAxis": "Independent Axis",
       "LoadFromFile": "Load from File",
       "PleaseEnterAValidDeadzone": "Please enter a valid deadzone",
