feat(efb/fbw): Support for TO/GA button built into the throttle (not on axis) (#8247)
* EFB and sim variables

* Activate TO/GA on full throttle key

* Change key mapping for TO/GA on/off

* Update CHANGELOG.md

* Localisation, proper terminology

* Make TOGA On Axis default true

* fix: changelog 0.12

* Update CHANGELOG.md

--- a/fbw-a32nx/src/localization/flypad/en.json
+++ b/fbw-a32nx/src/localization/flypad/en.json
@@ -629,6 +629,7 @@
       "ReverseFull": "Reverse Full",
       "ReverseIdle": "Reverse Idle",
       "ReverserOnAxis": "Reverser On Axis",
+      "TogaOnAxis": "TOGA On Axis",
       "SaveAndApply": "Save and Apply",
       "SetFromThrottle": "Set from Throttle",
       "ThrottleConfigurationReset": "Throttle Configuration Reset"
